--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version: 2018.04.05 (Brice - 04/11/18 9:28)
+- ate nows uses the boot package to compute p-values with bootstrap resampling
+
 Version: 1.4.9 (Brice - 2017-09-13)
 - predictCox can now compute baseline hazards for left and right censored data
 - fix the influence function for the ate
