--- a/vignettes/k-fold-CV.tex
+++ b/vignettes/k-fold-CV.tex
@@ -1,4 +1,4 @@
-% Created 2019-06-24 Mon 10:48
+% Created 2019-06-24 Mon 17:59
 % Intended LaTeX compiler: pdflatex
 \documentclass{article}
                \usepackage{listings}
@@ -54,13 +54,13 @@ basewidth={0.5em,0.4em},
 \maketitle
 
 \section{Introduction}
-\label{sec:orgc3bac13}
+\label{sec:orgce8d327}
 
 This document discusses the different cross-validation options of the
 \texttt{Score} function.
 
 \section{Formula}
-\label{sec:org2a05972}
+\label{sec:orgdd3b9ce}
 
 The observed outcome status at time \(t\) for subject \(i\) is
 \(\tilde Y_i=1_{\{\min(T_i,C_i)\le t\}}\) where \(T_i\) is the event
@@ -79,7 +79,7 @@ D_n = \underbrace{D_l}_{\text{Training set}} \cup \underbrace{D_v}_{\text{Valida
 \end{equation*}
 
 \subsection{\texttt{loob}}
-\label{sec:org86449da}
+\label{sec:orga7ecde7}
 
 \begin{itemize}
 \item \texttt{B} number of bootstrap samples
@@ -95,7 +95,7 @@ R_b(t|X_i)\}^2
 \end{equation*}
 
 \subsection{\texttt{bootcv}}
-\label{sec:org43397b6}
+\label{sec:org688d21f}
 
 \begin{itemize}
 \item \texttt{B} number of bootstrap samples
@@ -112,7 +112,7 @@ R_b(t|X_i)\}^2
 \end{equation*}
 
 \subsection{\texttt{cv-K} once}
-\label{sec:org93135a0}
+\label{sec:org03587f7}
 
 \begin{itemize}
 \item \texttt{K} number of folds
@@ -128,55 +128,43 @@ R_b(t|X_i)\}^2
 \end{equation*}
 
 \subsection{\texttt{cv-K} repeated B times}
-\label{sec:org4c46ee2}
+\label{sec:org790fb94}
 
-Same as \texttt{cv-K} but now we repeat K-fold B times. In this case, the
-bootstrap samples are of the same size a the whole original
-dataset. We use the notation:
+Same as \texttt{cv-K} but now we repeat K-fold B times. At each time we use a
+different seed to select the \(k\) folds of the data. We use the notation:
 
 \begin{itemize}
-\item \(D_n^b\) is the \(b\)'th bootstrap sample of size \(n\).
-\item \(D_v^{b,k}\) is the data in the fold-\(k\) of the \(b\)'th bootstrap sample.
-\item \(D_l^{b, k} = D^b_n \setminus D_v^{b,k}\)  is the bootstrap sample
-without the fold-\(k\).
-\item \(\hat{R}^b_k\) is a model trained on \(D_l^{b, k}\), i.e., on the
-\(b\)'th bootstrap sample without the fold-\(k\).
+\item \(D_v^{b,k}\) is the data in the fold-\(k\) at the \(b\)'th iteration.
+\item \(D_l^{b, k} = D^n \setminus D_v^{b,k}\)  is the data
+without the fold-\(k\) selected at iteration \(b\).
+\item \(\hat{R}^b_k\) is a model trained on \(D_l^{b, k}\), i.e., on whole
+data except fold-\(k\) from the \(b\)'th iteration.
 \item For each \(i = 1, \dots, n\) and \(b = 1, \dots, B\), let \(k_i^b\) be
 defined by \(i \in D^{b, k_i^b}_v\), i.e., \(k_i^b\) denotes the fold in
-\(D_n^b\) that subject \(i\) is part of. Then \(\hat{R}^b_{k_i} :=
+the \(b\) iteration that subject \(i\) is part of. Then \(\hat{R}^b_{k_i} :=
   \hat{R}^b_{k^b_i}\) denotes the model trained on the all the folds of the
-\(b\)'th bootstrap sample, except the fold including subject \(i\).
-\item \(l_i\) is the number (between \(0\) and \(B\)) of times that subject \(i\) is sampled,
-i.e., the number of bootstrap samples in
-which subject \(i\) is \emph{included}.
+\(b\)'th iteration, except the fold including subject \(i\).
 \end{itemize}
 
 Then, we have two
 possibilities:
 
 \begin{enumerate}
-\item Average the B values of \texttt{cv-K} (like \texttt{bootcv}):
+\item Average the B values of \texttt{cv-K} (like \texttt{bootcv}).
+\item For each \(i\) collect the B predictions (like \texttt{loob}).
 \end{enumerate}
+
+Because we use the same data set in every iteration, each subject \(i\)
+is present in a validation set exactly \(B\) times. Therefore these two
+approaches give the same formula:
 \begin{equation*}
-  \frac{1}{B}\sum_{b=1}^{B}\frac{1}{n}\sum_{i \in D^b_n} \hat{W}_i(t)
+  \frac{1}{B}\sum_{b=1}^{B}\frac{1}{n}\sum_{i \in D_n} \hat{W}_i(t)
   \left ( \tilde{Y}_i(t) - \hat{R}_{k_i}^b(t \mid X_i)  \right)^2 .
 \end{equation*}
-\begin{enumerate}
-\item For each \(i\) collect the B predictions (like \texttt{loob}):
-\end{enumerate}
-\begin{equation*}
-  \frac{1}{n}\sum_{\substack{i = 1, \\ l_i \not = 0}}^n
-  \frac{1}{l_i} \sum_{b : i \in D^b_n} \hat{W}_i(t) \left(
-    \tilde{Y}_i(t) - \hat{R}_{k_i}^b(t \mid X_i) \right)^2.
-\end{equation*}
 
-If we do not use replacement in the bootstrap sampling (which then
-simply gives \(B\) different partitions of the same dataset) the two
-formulas are of course identical, because then every subject \(i\) is
-present in all \(B\) bootstrap samples and \(D_n^b = D_n\) for all \(b\).
 
 \section{Testing}
-\label{sec:org3fe00db}
+\label{sec:orgee1284b}
 Copy/paste some functionality form other vignette.
 
 Packages and source for reloading after edits.
