--- a/README.org
+++ b/README.org
@@ -3,6 +3,7 @@
 <a href="http://cran.rstudio.com/web/packages/riskRegression/index.html"><img src="http://www.r-pkg.org/badges/version/riskRegression"></a>
 <a href="http://cranlogs.r-pkg.org/downloads/total/last-month/riskRegression"><img src="http://cranlogs.r-pkg.org/badges/riskRegression"></a>
 <a href="https://ci.appveyor.com/project/bozenne/riskRegression"><img src="https://ci.appveyor.com/api/projects/status/github/tagteam/riskRegression?svg=true" alt="Build status"></a>
+<a href="https://github.com/tagteam/riskRegression/actions"><img src="https://github.com/tagteam/riskRegression/workflows/R-CMD-check/badge.svg" alt="R build status"></a>
 #+END_HTML
 
 * Install
