--- a/vignettes/synthesize.Rmd
+++ b/vignettes/synthesize.Rmd
@@ -133,9 +133,9 @@ knitr::kable(res)
 
 The coefficients of the model with the simulated data from the recursive model are not particularly close to the original data. Let us simulate to see if these differences are systematic:
 
-```{r}
+```{r,warning=FALSE}
 library(ggplot2)
-library(gridExtra)
+#library(gridExtra)
 
 make.boxplot.simulation <- function(object, object.rec, data, sample.sizes, n.sim){
   #Copare to model from original data
@@ -178,7 +178,7 @@ make.boxplot.simulation <- function(object, object.rec, data, sample.sizes, n.si
 
 make.boxplot.simulation(ms,ms.rec, Melanoma, c(100,200,500,1000),1000)
 ```
-
+Which looks pretty reasonable.
 
 We could also check one of the other relationships in the recursive model, i.e `logthick ~ sex + age + invasion`:
 ```{r}
