--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-<a href="https://travis-ci.org/tagteam/riskRegression"><img src="https://travis-ci.org/tagteam/riskRegression.svg?branch=master"></a>
+#+BEGIN_HTML
 <a href="http://cran.rstudio.com/web/packages/riskRegression/index.html"><img src="http://www.r-pkg.org/badges/version/riskRegression"></a>
 <a href="http://cranlogs.r-pkg.org/downloads/total/last-month/riskRegression"><img src="http://cranlogs.r-pkg.org/badges/riskRegression"></a>
 <a href="https://ci.appveyor.com/project/bozenne/riskRegression"><img src="https://ci.appveyor.com/api/projects/status/github/tagteam/riskRegression?svg=true" alt="Build status"></a>
